--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   hive_flutter: ^0.2.1
   path_provider: ^1.3.0
   uuid: ^2.0.1
+  http: ^0.12.0+2
+  logger: ^0.6.0
 
 dev_dependencies:
   flutter_test:
