--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   beauty_textfield: any
   intl: ^0.15.8
   get_it: ^2.0.1
-  flutter_bloc: ^0.21.0
+  flutter_bloc: ^2.0.0 #^0.21.0
+  bloc: ^2.0.0
   equatable: ^0.4.0
   dartz: ^0.8.6
   hive: ^1.0.0
