--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   uuid: ^2.0.1
   http: ^0.12.0+2
   logger: ^0.6.0
+  clipboard_manager: ^0.0.1
+  share: ^0.6.3+1
 
 dev_dependencies:
   flutter_test:
