--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -31,7 +31,12 @@ dependencies:
   url_launcher: ^5.2.5
   animator: ^1.0.0+1
   shared_preferences_settings: ^1.0.0+1
-
+  flutter_auth_buttons:
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+5
+  google_sign_in: ^4.0.11
 
 dependency_overrides:
   rxdart: ^0.22.0
