--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   google_sign_in: ^4.0.11
+  json_annotation: ^3.0.0
+
 
 dependency_overrides:
   rxdart: ^0.22.0
@@ -47,7 +49,7 @@ dev_dependencies:
   hive_generator: ^0.5.1
   build_runner: ^1.7.1
   mockito: ^4.1.0
-
+  json_serializable: ^3.2.3
 
 flutter:
   uses-material-design: true
