--- a/shortly/android/app/build.gradle
+++ b/shortly/android/app/build.gradle
@@ -65,10 +65,10 @@ android {
         release {
             signingConfig signingConfigs.release
 
-//            minifyEnabled true
-//            useProguard true
-//
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            useProguard true
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
