--- a/shortly/android/app/src/main/AndroidManifest.xml
+++ b/shortly/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="shortly"
@@ -31,5 +33,10 @@
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.NotificationService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 </manifest>
