--- a/shortly/pubspec.yaml
+++ b/shortly/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   uuid: ^2.0.1
   http: ^0.12.0+2
   logger: ^0.6.0
-  clipboard_manager: ^0.0.1
   share: ^0.6.3+1
   receive_sharing_intent: ^1.3.1+1
   toast: ^0.1.5
@@ -38,6 +37,8 @@ dependencies:
   google_sign_in: ^4.0.11
   json_annotation: ^3.0.0
   bottom_navy_bar: ^5.2.2
+  flutter_local_notifications: ^0.8.4+2
+  android_intent: "^0.2.1"
 
 dependency_overrides:
   rxdart: ^0.22.0
